update default.env to add configuration parameters for workers, requests, confidence threshold, region, and log level

--- a/default.env
+++ b/default.env
@@ -1,2 +1,7 @@
 LICENSE_KEY=xxxxxxxx
-TOKEN=xxxxxxx  
+TOKEN=xxxxxxx
+WORKERS=2
+MAX_REQUESTS=5000
+CONFIDENCE_THRESHOLD=80
+REGION=th
+LOG_LEVEL=INFO
